# NVMA

./: .gitignore  README.md
asm/: compiler.py  devfile.py  devtest.py  disasm.py  example.nvma  example.nvmb  instruction.py  main.py  memory.py
nanovm/: CMakeLists.txt  Readme.md  compile.cpp  dbg.cpp  exec.cpp  factorial.nvma  isatest.nvma  isatest_input.json  runtime_compiler.hpp  tests.cpp  utils.cpp  utils.hpp  vmop.hpp
